new schematics, major changes in chapter 2 - theory

--- a/EE-dyplom.bib
+++ b/EE-dyplom.bib
@@ -23,16 +23,35 @@
     address={Kraków},
     year = {2010},
 }
+@book{tumanski2007,
+    author = {Sławomir Tumański},
+    title = {Technika pomiarowa},
+    publisher = {WNT},
+    address={Warszawa},
+    year = {2007},
+}
 @misc{rtd_norm,
     author = {{PN-EN 60751:2009}},
     title = {Czujniki platynowe przemysłowych termometrów rezystancyjnych i
     platynowe czujniki temperatury},
 }
+@misc{ni-temperature,
+    title = {Overview of Temperature Sensors},
+    note={\href{https://www.ni.com/en-us/innovations/white-papers/06/overview-of-temperature-sensors.html}
+    {<https://www.ni.com/en-us/innovations/white-papers/06/overview-of-temperature-sensors.html>},
+    dostęp uzyskano: 2021-11}
+}
 @manual{thermocouple,
   title = {Thermocouples},
-  note =
-  {\href{https://www.madur.com/pdf/article/en/Thermocouples\_EN.pdf}
-  {<https://www.madur.com/pdf/article/en/Thermocouples\_EN.pdf>}, dostęp uzyskano: 2022-01-05}
+  note = {\href{https://www.madur.com/pdf/article/en/Thermocouples\_EN.pdf}
+  {<https://www.madur.com/pdf/article/en/Thermocouples\_EN.pdf>},
+  dostęp uzyskano: 2022-01-05}
+}
+@misc{self-heating,
+    title = {RTDs -- Application and Technical Data},
+    note={\href{https://www.thermosensors.com/rtd/definitions/}
+    {<https://www.thermosensors.com/rtd/definitions/>},
+    dostęp uzyskano: 2022-01}
 }
 @book{hoffman1989,
     author = {K. Hoffman},
@@ -40,6 +59,12 @@
     publisher = {HBM GmbH},
     address={Darmstadt},
     year = {1989},
+}
+@misc{ni-strain,
+    title = {Measuring Strain with Strain Gages},
+    note={\href{https://www.ni.com/en-us/innovations/white-papers/07/measuring-strain-with-strain-gages.html}
+    {<https://www.ni.com/en-us/innovations/white-papers/07/measuring-strain-with-strain-gages.html>},
+    dostęp uzyskano: 2021-11}
 }
 @book{milek2006,
     author = {M. Miłek},
@@ -55,23 +80,28 @@
 }
 @misc{react-main,
     title = {React, A Javascript library for building user interfaces},
-    note={\href{https://reactjs.org/}{<https://reactjs.org/>}, dostęp uzyskano: 2021-11}
+    note={\href{https://reactjs.org/}{<https://reactjs.org/>},
+    dostęp uzyskano: 2021-11}
 }
 @misc{react-docs,
-    note={Dokumentacja frameworku React \href{https://reactjs.org/docs}{<https://reactjs.org/docs/>},
+    note={Dokumentacja frameworku React \href{https://reactjs.org/docs}
+    {<https://reactjs.org/docs/>},
     dostęp uzyskano: 2021-11}
 }
 @misc{nextjs-main,
     title = {The React Framework for Production},
-    note={\href{https://nextjs.org/}{<https://nextjs.org/>}, dostęp uzyskano: 2021-11}
+    note={\href{https://nextjs.org/}{<https://nextjs.org/>},
+    dostęp uzyskano: 2021-11}
 }
 @misc{nextjs-docs,
-    note={Dokumentacja frameworku Next.js \href{https://nextjs.org/docs}{<https://nextjs.org/docs>},
+    note={Dokumentacja frameworku Next.js \href{https://nextjs.org/docs}
+    {<https://nextjs.org/docs>},
     dostęp uzyskano: 2021-11}
 }
 @misc{ts-main,
     title = {TypeScript is JavaScript with syntax for types},
-    note={\href{https://www.typescriptlang.org/}{<https://www.typescriptlang.org/>}, dostęp uzyskano: 2021-11}
+    note={\href{https://www.typescriptlang.org/}
+    {<https://www.typescriptlang.org/>}, dostęp uzyskano: 2021-11}
 }
 @misc{ts-docs,
     note={Dokumentacja języka Typescript \href{https://www.typescriptlang.org/docs/}
@@ -80,13 +110,16 @@
 }
 @misc{snyk-licences,
     title={What Is a Software License?},
-    note={Typy licencji oprogramowania \href{https://snyk.io/learn/what-is-a-software-license/}
-    {<https://snyk.io/learn/what-is-a-software-license>}, dostęp uzyskano: 2022-01-13}
+    note={Typy licencji oprogramowania
+    \href{https://snyk.io/learn/what-is-a-software-license/}
+    {<https://snyk.io/learn/what-is-a-software-license>},
+    dostęp uzyskano: 2022-01-13}
 }
 @misc{snyk-mit,
     title={What is the MIT License?},
     note={\href{https://snyk.io/learn/what-is-mit-license/}
-    {<https://snyk.io/learn/what-is-mit-license/>}, dostęp uzyskano: 2022-01-13}
+    {<https://snyk.io/learn/what-is-mit-license/>},
+    dostęp uzyskano: 2022-01-13}
 }
 @inproceedings{component-programming,
 author = {He, Jifeng and Liu, Zhiming and Zhan, Naijun},
