--- a/text/app/app.tex
+++ b/text/app/app.tex
@@ -22,7 +22,7 @@ projektach, zgodnie~z~opublikowaną licencją \cite{snyk-licences, snyk-mit}.
 Aplikacja została zaimplementowana wykorzystując do tego język TypeScript. Jest on nadzbiorem --
 rozszerzeniem -- języka JavaScript. TypeScript umożliwia statyczne typowanie oraz programowanie
 obiektowe, gdzie JavaScript jest językiem skryptowym. Wykorzystanie TypeScript~w~programowaniu
-pozwala na unikanie błędów, które~w~późniejszym czasie mogłyby doprowadzić nieplanowanego
+pozwala na unikanie błędów, które~w~późniejszym czasie mogłyby doprowadzić do nieplanowanego
 zachowania tworzonej aplikacji. Aplikacje, napisane~w~TypeScript, są interpretowane oraz
 kompilowane do JavaScript, aby można było je uruchomić przykładowo~w~przeglądarce
 internetowej \cite{ts-main}.
