--- a/text/sensor-theory/dynamic-temperature.tex
+++ b/text/sensor-theory/dynamic-temperature.tex
@@ -1,7 +1,7 @@
 Charakterystyki dynamiczne sensorów temperatury wyznacza się na podstawie ich stałej czasowej.
 Wartość tę określa czas, jakiego sensor potrzebuje, aby jego odpowiedź dynamiczna osiągnęła 63.2\%
 stabilizacji po gwałtownej zmianie temperatury jego otoczenia. Przykładową odpowiedź
-skokową~z~widoczną charakterystyką dynamiczą przedstawia rysunek \ref{img:transfer-rtd}
+skokową~z~widoczną charakterystyką dynamiczą przedstawia rysunek \ref{img:dynamic-characteristic}
 \cite{gawedzki2010}. Stałą czasową sensorów termorezystancyjnych oraz termoelektrycznych można
 wyznaczyć korzystając~z~zależności:
 
@@ -17,8 +17,5 @@ wyznaczyć korzystając~z~zależności:
   C & pojemność cieplna, charakterystyki dla materiału
 \end{eqparams}
 
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.7\textwidth]{sensor-theory/transfer-rtd}
-  \caption{\label{img:transfer-rtd}Przykładowe odpowiedzi skokowe sensorów temperatury.}
-\end{figure}
+\addimage{1}{sensor-theory/dynamic-characteristic}{\label{img:dynamic-characteristic}Przykładowa
+  odpowiedź skokowa sensora temperatury.}
